# adaptive-era

./: LICENSE  Makefile  README.md  pyproject.toml
src/era_dts/: benchmark.py  construct.py  dead_time_extraction.py  downloader.py  era.py  fastoperators.py  plots.py  utils.py
